# ClaudeStatus

./: .gitignore  CLAUDE.md  DECISIONS.md  NEXT_STEPS.md  README.md  install.sh
app/: package-lock.json  package.json
app/src/: index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: install.rs  lib.rs
extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts
hooks/: cursor-log-events.sh  cursor-logger-setup.mjs  cursor-setup.mjs  log-events.sh  logger-setup.mjs  report.sh  setup.mjs
