[package]
name = "app"
version = "0.4.0"
description = "AgentStatus — a floating light bar for Claude Code, Codex, and Cursor session status"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Probe IDE-lock owner PIDs (kill(pid, 0)) to tell a live IDE window from a
# force-quit one that left its lock behind — used for stale-light pruning (#027).
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
